force-app/main/default/objects/vlocity_cmt__SyncDeltaSnapshot__c/vlocity_cmt__SyncDeltaSnapshot__c.object-meta.xml
<CustomObject>
    <label>Sync Delta Snapshot</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sync Delta Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Delta Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>