force-app/main/default/objects/vlocity_cmt__SyncDeltaSnapshot__c/fields/vlocity_cmt__EndDeltaIdx__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EndDeltaIdx__c</fullName>
    <label>End Delta Idx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>