force-app/main/default/objects/vlocity_cmt__SyncDeltaSnapshot__c/fields/vlocity_cmt__UnmergedSyncDeltas__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UnmergedSyncDeltas__c</fullName>
    <label>Unmerged Sync Deltas</label>
    <type>TextArea</type>
</CustomField>